<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comaveryscottnorris.httpsgithub.team4sconnect4.Choose_Name_2P"
    tools:showIn="@layout/activity_choose__name_2_p">

    <Button
        android:id="@+id/playButton"
        android:layout_width="252dp"
        android:layout_height="81dp"
        android:text="@string/play"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <RadioGroup
        android:id="@+id/GridList"
        android:layout_width="145dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375">

        <RadioButton
            android:id="@+id/radioButtonSize1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/gridSize1"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="205dp" />

        <RadioButton
            android:id="@+id/radioButtonSize2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gridSize2"
            app:layout_constraintBottom_toTopOf="@+id/GridList"
            app:layout_constraintEnd_toStartOf="@+id/GridList"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/GridList"
            app:layout_constraintTop_toBottomOf="@+id/GridList" />

        <RadioButton
            android:id="@+id/radioButtonSize3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gridSize3"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="205dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/player1_2P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player_one"
        app:layout_constraintBottom_toTopOf="@+id/player2_2P"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player2_2P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player2default"
        app:layout_constraintBottom_toTopOf="@+id/GridList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_2P" />

    <EditText
        android:id="@+id/numberOfRounds2P"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/RoundsText"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:text="Number of Rounds"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

</android.support.constraint.ConstraintLayout>
